[package]
name = "hangman"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.70"
description = "Play Hangman in your terminal"
authors = ["John Thorvald Wodder II <hangman@varonathe.org>"]
repository = "https://github.com/jwodder/hangman"
documentation = "https://github.com/jwodder/hangman"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
csv = "1.3.0"
lexopt = "0.3.0"
patharg = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
strip-ansi-escapes = "0.2.0"
unicode-width = "0.1.11"
